--- a/soft/soft/soft.vcxproj
+++ b/soft/soft/soft.vcxproj
@@ -29,6 +29,7 @@
     <ClInclude Include="..\..\src\clip.h" />
     <ClInclude Include="..\..\src\math.h" />
     <ClInclude Include="..\..\src\3draster.h" />
+    <ClInclude Include="..\..\src\OBJ_Loader.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
