--- a/soft/soft/soft.vcxproj
+++ b/soft/soft/soft.vcxproj
@@ -31,6 +31,7 @@
     <ClInclude Include="..\..\src\3draster.h" />
     <ClInclude Include="..\..\src\OBJ_Loader.h" />
     <ClInclude Include="..\..\src\stb_image.h" />
+    <ClInclude Include="..\..\src\vertexShader.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
