--- a/soft/soft/soft.vcxproj.filters
+++ b/soft/soft/soft.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="..\..\src\vertexShader.h">
       <Filter>源文件</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\fragmentShader.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
