--- a/soft/soft/soft.vcxproj
+++ b/soft/soft/soft.vcxproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\src\2draster.h" />
     <ClInclude Include="..\..\src\clip.h" />
+    <ClInclude Include="..\..\src\fragmentShader.h" />
     <ClInclude Include="..\..\src\math.h" />
     <ClInclude Include="..\..\src\3draster.h" />
     <ClInclude Include="..\..\src\OBJ_Loader.h" />
