--- a/soft/soft/soft.vcxproj
+++ b/soft/soft/soft.vcxproj
@@ -23,18 +23,23 @@
     <ClCompile Include="..\..\src\clip.cpp" />
     <ClCompile Include="..\..\src\main.cpp" />
     <ClCompile Include="..\..\src\3draster.cpp" />
+    <ClCompile Include="..\..\src\render.cpp" />
     <ClCompile Include="..\..\src\subdivision\halfedge.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\2draster.h" />
     <ClInclude Include="..\..\src\clip.h" />
     <ClInclude Include="..\..\src\fragmentShader.h" />
-    <ClInclude Include="..\..\src\math.h" />
     <ClInclude Include="..\..\src\3draster.h" />
-    <ClInclude Include="..\..\src\OBJ_Loader.h" />
-    <ClInclude Include="..\..\src\stb_image.h" />
+    <ClInclude Include="..\..\src\render.h" />
     <ClInclude Include="..\..\src\subdivision\halfedge.h" />
-    <ClInclude Include="..\..\src\texture.h" />
+    <ClInclude Include="..\..\src\utils\math.h" />
+    <ClInclude Include="..\..\src\utils\mesh.h" />
+    <ClInclude Include="..\..\src\utils\model.h" />
+    <ClInclude Include="..\..\src\utils\OBJ_Loader.h" />
+    <ClInclude Include="..\..\src\utils\stb_image.h" />
+    <ClInclude Include="..\..\src\utils\texture.h" />
+    <ClInclude Include="..\..\src\utils\vertex.h" />
     <ClInclude Include="..\..\src\vertexShader.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -93,8 +98,8 @@
     <LibraryPath>D:\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>D:\opencv\build\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\opencv\build\x64\vc15\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>E:\CG\softRenderer\includes;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\CG\softRenderer\libs;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -147,7 +152,7 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opencv_world343.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Manifest>
       <EnableDpiAwareness>PerMonitorHighDPIAware</EnableDpiAwareness>
