--- a/soft/soft/soft.vcxproj
+++ b/soft/soft/soft.vcxproj
@@ -29,9 +29,10 @@
   <ItemGroup>
     <ClInclude Include="..\..\src\2draster.h" />
     <ClInclude Include="..\..\src\clip.h" />
-    <ClInclude Include="..\..\src\fragmentShader.h" />
     <ClInclude Include="..\..\src\3draster.h" />
     <ClInclude Include="..\..\src\render.h" />
+    <ClInclude Include="..\..\src\shaders\fragmentShader.h" />
+    <ClInclude Include="..\..\src\shaders\vertexShader.h" />
     <ClInclude Include="..\..\src\subdivision\halfedge.h" />
     <ClInclude Include="..\..\src\utils\math.h" />
     <ClInclude Include="..\..\src\utils\mesh.h" />
@@ -40,7 +41,6 @@
     <ClInclude Include="..\..\src\utils\stb_image.h" />
     <ClInclude Include="..\..\src\utils\texture.h" />
     <ClInclude Include="..\..\src\utils\vertex.h" />
-    <ClInclude Include="..\..\src\vertexShader.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
