--- a/soft/soft/soft.vcxproj.filters
+++ b/soft/soft/soft.vcxproj.filters
@@ -89,5 +89,8 @@
     <ClInclude Include="..\..\src\utils\camera.h">
       <Filter>源文件\utils</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\utils\shader_payload.h">
+      <Filter>源文件\utils</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
