--- a/soft/soft/soft.vcxproj
+++ b/soft/soft/soft.vcxproj
@@ -39,6 +39,7 @@
     <ClInclude Include="..\..\src\utils\mesh.h" />
     <ClInclude Include="..\..\src\utils\model.h" />
     <ClInclude Include="..\..\src\utils\OBJ_Loader.h" />
+    <ClInclude Include="..\..\src\utils\shader_payload.h" />
     <ClInclude Include="..\..\src\utils\stb_image.h" />
     <ClInclude Include="..\..\src\utils\texture.h" />
     <ClInclude Include="..\..\src\utils\vertex.h" />
